--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav class="nav_logo"> <a href="#">travel.io</a></nav>
+    <nav>
+    <div class="nav_logo"> <a href="#">travel.io</a></div>
     <ul class="nav_links">
         <li class="link">home</li>
         <li class="link">features</li>
@@ -16,6 +18,53 @@
     </ul>
     <div class="search_box">
         <input type="text" placeholder="search">
-    </div>    
+        <i class="fa-solid fa-magnifying-glass"></i>
+    </div>
+</nav>
+
+<div class="container">
+    <div class="left">
+        <div class="content">
+            <h1>discovering <br> the world</h1>
+            <p>
+                through travel,individuals have the opportunity to immerse <br>
+                themselves in different culuters , try new foods, and witness the <br>
+                beauty of nature . exploring new places can also challenge one's <br>
+                confort zone and help to develop important life skills.
+            </p>
+            <div class="btns">
+                <button class="read-more">read more</button>
+                <button class="our-blogs">our blogs</button>
+            </div>
+            <div class="chevrons">
+                <span class="chev_left">
+                    <i class="fa-solid fa-angle-left"></i>
+                </span>
+                <span class="chev_right">
+                    <i class="fa-solid fa-angle-right"></i>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="right">
+        <form action="">
+            <h4>where you want to go?</h4>
+            <div class="form_group">
+                <label for="destination">Destination</label>
+                <input type="text" name="destination" placeholder="Enter destination">
+            </div>
+            <div class="form_group">
+                <label for="date">Date</label>
+                <input type="text" name="date" id="date" placeholder="DD/MM/YY">
+            </div>
+            <button type="submit">check travel package</button>
+        </form>
+    </div>
+    <div class="bottom_tracker">
+        <span></span>
+    </div>
+</div>
+
 </body>
 </html>
